@@ -151,12 +151,16 @@ class Tables extends \XoopsObject
         }
         $form->addElement($modulesSelect, true);
 
+        /*
         $tableNameText = new \XoopsFormText(\_AM_MODULEBUILDER_TABLE_NAME, 'table_name', 40, 150, $tableName);
         $tableNameText->setDescription(\_AM_MODULEBUILDER_TABLE_NAME_DESC);
         $form->addElement($tableNameText, true);
+        */
+        $form->addElement(new \XoopsFormHidden('table_name', $tableName));
 
         $tableSoleNameText = new \XoopsFormText(\_AM_MODULEBUILDER_TABLE_SOLENAME, 'table_solename', 40, 150, $this->getVar('table_solename'));
         $tableSoleNameText->setDescription(\_AM_MODULEBUILDER_TABLE_SOLENAME_DESC);
+        $tableSoleNameText->setExtra('onchange="changeTablesolename()"');
         $form->addElement($tableSoleNameText, true);
 
         $radioCategory = $isNew ? 0 : $this->getVar('table_category');
